packages/dilemma/src/dilemma.scss
.dilemma-field {
  --dilemmaOptionFigureAspectRatio: var(
    --set-dilemma-option-figure-aspect-ratio,
    1 / 1.3
  );

  --dilemmaOptionOutlineColor: var(--set-dilemma-option-outline-color, #d2d2d2);
  --dilemmaOptionOutlineWidth: var(--set-dilemma-option-outline-width, 1px);
  --dilemmaOptionOutlineOffset: var(--set-dilemma-option-outline-offset, -1px);

  --dilemmaOptionOutlineColorActive: var(
    --set-dilemma-option-outline-color--active,
    var(--utrecht-button-primary-action-background-color, #11b886)
  );
  --dilemmaOptionOutlineWidthActive: var(
    --set-dilemma-option-outline-width--active,
    4px
  );
  --dilemmaOptionOutlineOffsetActive: var(
    --set-dilemma-option-outline-offset--active,
    -4px
  );

  --dilemmaImageBorderRadius: var(--set-dilemma-image-border-radius, 12px);
  --dilemmaIntroHighLight: var(
    --set-dilemma-intro-highlight,
    var(--utrecht-button-primary-action-background-color, #11b886)
  );

  height: auto;
  align-content: center;

  .dilemma-intro {
    margin-bottom: 40px;

    h2 {
      margin: 0;
      text-align: center;

      i {
        color: var(--dilemmaIntroHighLight);
        font-style: normal;
        font-weight: inherit;
        font-size: inherit;
        font-family: inherit;
      }
    }

    .dilemma-progress {
      position: absolute;
      top: 36px;
      right: 24px;
      font-style: italic;
      opacity: 0.5;
    }
  }

  .dilemma-label {
    grid-column: 1 / 3;
    grid-row: 1;
    z-index: 1;
    pointer-events: none;
    display: flex;
    justify-content: center;

    span {
      align-self: center;
      text-align: center;
      width: 35px;
      height: 35px;
      line-height: 35px;
      background-color: #fff;
      border-radius: 50%;
      font-weight: bold;
      font-size: 16px;
      box-shadow: 0px 3.67px 12.83px 0px rgba(0, 0, 0, 0.55);
    }
  }

  .dilemma-options {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr auto;
    gap: 8px;
    position: relative;

    &:has(input:checked) {
      input:not(:checked) + label {
        figure {
          scale: 0.98;
          opacity: 0.5;
        }

        .dilemma-option-content {
          opacity: 0;
        }
      }
    }

    .dilemma-option {
      grid-row: 1 / 3;
      display: grid;
      grid-template-rows: subgrid;

      &:first-of-type {
        grid-column: 1;
      }

      &:last-of-type {
        grid-column: 2;
      }

      input {
        height: 0;
        width: 0;
        overflow: hidden;
        margin: 0;
        position: absolute;

        &:focus {
          outline: none;

          &:focus-visible + label figure {
            outline: 2px dashed var(--dilemmaOptionOutlineColorActive);
            outline-offset: 2px;
          }
        }

        &:checked + label {
          figure {
            outline-color: var(--dilemmaOptionOutlineColorActive);
            outline-width: var(--dilemmaOptionOutlineWidthActive);
            outline-offset: var(--dilemmaOptionOutlineOffsetActive);
          }
        }
      }

      label {
        grid-row: span 2;
        display: grid;
        grid-template-rows: subgrid;

        .dilemma-option-content {
          margin-top: 16px;
          transition: opacity 0.2s ease-in;
          display: flex;
          flex-direction: column;
          gap: 8px;
        }
      }

      figure {
        margin: 0;
        padding: 0;
        aspect-ratio: var(--dilemmaOptionFigureAspectRatio);
        display: block;
        cursor: pointer;

        border-radius: var(--dilemmaImageBorderRadius);
        overflow: hidden;

        transition: all 0.2s ease-in;
        outline: solid var(--dilemmaOptionOutlineWidth)
          var(--dilemmaOptionOutlineColor);
        outline-offset: var(--dilemmaOptionOutlineOffset);

        img {
          width: 100%;
          height: 100%;
          max-width: unset;
          max-height: unset;
          object-fit: cover;
          display: block;
        }
      }
    }
  }

  .dilemma-actions {
    min-height: 70px;
  }

  .dilemma-back-button {
    padding: 0;
    border: unset;
    background: unset;
    position: absolute;
    top: 48px;
    left: 24px;
    color: var(
      --setBackColor,
      var(--utrecht-button-primary-action-background-color, #094b81)
    );
    display: flex;
    z-index: 99;
    gap: 4px;
    line-height: 21px;
    background: #fff;
    padding-right: 10px;

    &[disabled] {
      opacity: 0;
      pointer-events: none;
    }

    &:before {
      content: '';
      -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='currentColor'%3E%3Cpath d='M7.82843 10.9999H20V12.9999H7.82843L13.1924 18.3638L11.7782 19.778L4 11.9999L11.7782 4.22168L13.1924 5.63589L7.82843 10.9999Z'%3E%3C/path%3E%3C/svg%3E");
      mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='currentColor'%3E%3Cpath d='M7.82843 10.9999H20V12.9999H7.82843L13.1924 18.3638L11.7782 19.778L4 11.9999L11.7782 4.22168L13.1924 5.63589L7.82843 10.9999Z'%3E%3C/path%3E%3C/svg%3E");
      width: 20px;
      height: 20px;
      -webkit-mask-size: contain;
      mask-size: contain;
      -webkit-mask-repeat: no-repeat;
      mask-repeat: no-repeat;
      background-color: var(
        --setBackColor,
        var(--utrecht-button-primary-action-background-color, #094b81)
      );
      display: block;
    }
  }

  .dilemma-next-button {
    position: absolute;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 640 640'%3E%3C!--!Font Awesome Free v7.0.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--%3E%3Cpath d='M439.1 297.4C451.6 309.9 451.6 330.2 439.1 342.7L279.1 502.7C266.6 515.2 246.3 515.2 233.8 502.7C221.3 490.2 221.3 469.9 233.8 457.4L371.2 320L233.9 182.6C221.4 170.1 221.4 149.8 233.9 137.3C246.4 124.8 266.7 124.8 279.2 137.3L439.2 297.3z'/%3E%3C/svg%3E");
    background-size: 26px;
    background-repeat: no-repeat;
    background-color: var(--youth-next-button-background-color);
    width: 64px;
    height: 64px;
    border-radius: 50%;
    background-position: 20px 20px;
    animation: nextPagePulse 0.8s infinite ease-in-out;
    pointer-events: all;
    border: none;
    right: 24px;
    bottom: 24px;
    z-index: 10;

    &:disabled {
      opacity: 0.5;
      pointer-events: none;
      animation: unset;
    }
  }
}

// Make sure the 'next' button is not shown when explanation asked for.
.question-type-dilemma:has(.--explanation) {
  ~ .button-group {
    .utrecht-button::after {
      display: none;
    }
  }
}

// styling for the finished state
.dilemma-field {
  .dilemma-finished-content {
    .dilemma-intro {
      text-align: left;
      margin-bottom: 16px;

      h2 {
        text-align: left;
      }
    }

    .dilemma-summary {
      display: grid;
      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
      gap: 16px;
      width: 100%;

      &-item {
        border-radius: 8px;
        border: 1px solid #e0e0e0;
        box-shadow: 0 2px 4px #0000001a;
        overflow: hidden;
      }

      &-content {
        padding: 16px;
        display: flex;
        flex-direction: column;
        gap: 8px;
      }

      &-option {
        border-radius: 8px;
        border: 2px solid #e0e0e0;
        background: #fff;
        transition: all 0.2s ease-in-out;

        &:has(.active) {
          background: var(
            --setActiveOverviewBackground,
            var(--utrecht-button-primary-action-background-color, #094b81)
          );
          border: 2px solid
            var(
              --setActiveOverviewBackground,
              var(--utrecht-button-primary-action-background-color, #094b81)
            );

          .utrecht-heading-4,
          .utrecht-paragraph {
            color: #fff;
          }
        }

        .dilemma-summary-btn {
          width: 100%;
          padding: 8px;
          margin: 0;
          border: none;
          background-color: unset;
          text-align: left;
          display: flex;
          align-items: center;
          cursor: pointer;

          .utrecht-heading-4,
          .utrecht-paragraph {
            font-size: 14px;
            transition: color 0.2s ease-in-out;
          }

          .dilemma-option-image {
            width: 60px;
            height: 60px;
            border-radius: var(--dilemmaImageBorderRadius);
            overflow: hidden;
            margin-right: 12px;
            flex-shrink: 0;

            img {
              width: 100%;
              height: 100%;
              object-fit: cover;
              display: block;
            }
          }
        }
      }

      &-explanation {
        background: #f0f0f0;
        padding: 16px;

        textarea {
          width: 100%;
          border: none;
          background: #fff;
          font-family: inherit;
          font-size: 16px;
          resize: none;
          padding: 8px;
          border-radius: 6px;
          display: block;
          height: 60px;
        }
      }
    }
  }
}

